-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.1
-
None
-
Windows 10
Qt fails to create Chromium
I see the following errors in debug logs from an attempt to create Chromium QWebEngineView window on some Windows OS machines.
We running Qt with software openGL rendering by settings at the very begging
`QCoreApplication::setAttribute(Qt::AA_UseSoftwareOpenGL, true);`
The outcome is we have a window without contents in it.
The error from debug logs is the following:
1.2.2259 22888 2017-03-03T09:13:36.993 DEBUG showWindow2: remote desktop: false
1.2.2259 22888 2017-03-03T09:13:36.994 DEBUG QWindowsWindow::propagateSizeHints 0xa819ed8 QWidgetWindow(0xc173550, name="MainWindowImplClassWindow")
1.2.2259 22888 2017-03-03T09:13:36.995 DEBUG QWindowsIntegration::createPlatformOpenGLContext QSurfaceFormat(version 2.0, options QFlags(), depthBufferSize -1, redBufferSize -1, greenBufferSize -1, blueBufferSize -1, alphaBufferSize 8, stencilBufferSize -1, samples -1, swapBehavior 0, swapInterval 1, profile 0)
1.2.2259 22888 2017-03-03T09:13:36.997 DEBUG ARB::choosePixelFormat obtained px # 45 not acceptable= PIXELFORMATDESCRIPTOR dwFlags=0x8c25 PFD_DRAW_TO_WINDOW PFD_SUPPORT_OPENGL PFD_SUPPORT_COMPOSITION PFD_DOUBLEBUFFER PFD_SWAP_LAYER_BUFFERS overlay iPixelType=0 cColorBits=32 cRedBits=8 cRedShift=16 cGreenBits=8 cGreenShift=8 cBlueBits=8 cBlueShift=0 cDepthBits=16 cAuxBuffers=4 iLayerType=0 cAlphaBits=8 cAlphaShift=24
1.2.2259 22888 2017-03-03T09:13:36.998 DEBUG "ARB::choosePixelFormat Attributes: 0x2003 , 0x2027 , 0x2010 , 0x1 , 0x2001 , 0x1 , 0x2014 , 0x18 , 0x2011 , 0x1 , 0x2013 , 0x202b , 0x201b , 0x8 , 0x2023 , 0x8 , 0x2041 , 0x0 , \n obtained px # 0 of 1 \n PIXELFORMATDESCRIPTOR dwFlags=0x8c25 PFD_DRAW_TO_WINDOW PFD_SUPPORT_OPENGL PFD_SUPPORT_COMPOSITION PFD_DOUBLEBUFFER PFD_SWAP_LAYER_BUFFERS overlay iPixelType=0 cColorBits=32 cRedBits=8 cRedShift=16 cGreenBits=8 cGreenShift=8 cBlueBits=8 cBlueShift=0 cDepthBits=16 cAuxBuffers=4 iLayerType=0 cAlphaBits=8 cAlphaShift=24 "
1.2.2259 22888 2017-03-03T09:13:36.998 WARN Attempted to use GDI functions with a non-opengl32.dll library
1.2.2259 22888 2017-03-03T09:13:36.999 WARN QWindowsGLContext::QWindowsGLContext: Unable find a suitable pixel format.
1.2.2259 22888 2017-03-03T09:13:37.000 DEBUG QWindowsGLContext::QWindowsGLContext 0xc03ce68 ARB requested: QSurfaceFormat(version 2.0, options QFlags(), depthBufferSize -1, redBufferSize -1, greenBufferSize -1, blueBufferSize -1, alphaBufferSize 8, stencilBufferSize -1, samples -1, swapBehavior 0, swapInterval 1, profile 0)
obtained # 0 GDI QSurfaceFormat(version 2.0, options QFlags(), depthBufferSize -1, redBufferSize -1, greenBufferSize -1, blueBufferSize -1, alphaBufferSize -1, stencilBufferSize -1, samples -1, swapBehavior 0, swapInterval 1, profile 0)
PIXELFORMATDESCRIPTOR dwFlags=0x8c25 PFD_DRAW_TO_WINDOW PFD_SUPPORT_OPENGL PFD_SUPPORT_COMPOSITION PFD_DOUBLEBUFFER PFD_SWAP_LAYER_BUFFERS overlay iPixelType=0 cColorBits=32 cRedBits=8 cRedShift=16 cGreenBits=8 cGreenShift=8 cBlueBits=8 cBlueShift=0 cDepthBits=16 cAuxBuffers=4 iLayerType=0 cAlphaBits=8 cAlphaShift=24 swap interval: -1
default: ContextFormat: v3.0 profile: 0 options: QFlags(0x4)
HGLRC= 0x0
1.2.2259 22888 2017-03-03T09:13:37.000 DEBUG QWindowsIntegration::createPlatformOpenGLContext QSurfaceFormat(version 2.0, options QFlags(), depthBufferSize 24, redBufferSize -1, greenBufferSize -1, blueBufferSize -1, alphaBufferSize -1, stencilBufferSize 8, samples 0, swapBehavior 0, swapInterval 1, profile 0)
1.2.2259 22888 2017-03-03T09:13:37.001 DEBUG ARB::choosePixelFormat obtained px # 45 not acceptable= PIXELFORMATDESCRIPTOR dwFlags=0x8c25 PFD_DRAW_TO_WINDOW PFD_SUPPORT_OPENGL PFD_SUPPORT_COMPOSITION PFD_DOUBLEBUFFER PFD_SWAP_LAYER_BUFFERS overlay iPixelType=0 cColorBits=32 cRedBits=8 cRedShift=16 cGreenBits=8 cGreenShift=8 cBlueBits=8 cBlueShift=0 cDepthBits=16 cAuxBuffers=4 iLayerType=0 cAlphaBits=8 cAlphaShift=24
1.2.2259 22888 2017-03-03T09:13:37.002 DEBUG "ARB::choosePixelFormat Attributes: 0x2003 , 0x2027 , 0x2010 , 0x1 , 0x2001 , 0x1 , 0x2014 , 0x18 , 0x2011 , 0x1 , 0x2022 , 0x18 , 0x2013 , 0x202b , 0x201b , 0x8 , 0x2023 , 0x8 , 0x2041 , 0x0 , \n obtained px # 0 of 1 \n PIXELFORMATDESCRIPTOR dwFlags=0x8c25 PFD_DRAW_TO_WINDOW PFD_SUPPORT_OPENGL PFD_SUPPORT_COMPOSITION PFD_DOUBLEBUFFER PFD_SWAP_LAYER_BUFFERS overlay iPixelType=0 cColorBits=32 cRedBits=8 cRedShift=16 cGreenBits=8 cGreenShift=8 cBlueBits=8 cBlueShift=0 cDepthBits=16 cAuxBuffers=4 iLayerType=0 cAlphaBits=8 cAlphaShift=24 "
1.2.2259 22888 2017-03-03T09:13:37.002 WARN Attempted to use GDI functions with a non-opengl32.dll library
1.2.2259 22888 2017-03-03T09:13:37.003 WARN QWindowsGLContext::QWindowsGLContext: Unable find a suitable pixel format.
1.2.2259 22888 2017-03-03T09:13:37.004 DEBUG QWindowsGLContext::QWindowsGLContext 0xc03db88 ARB requested: QSurfaceFormat(version 2.0, options QFlags(), depthBufferSize 24, redBufferSize -1, greenBufferSize -1, blueBufferSize -1, alphaBufferSize -1, stencilBufferSize 8, samples 0, swapBehavior 0, swapInterval 1, profile 0)
obtained # 0 GDI QSurfaceFormat(version 2.0, options QFlags(), depthBufferSize -1, redBufferSize -1, greenBufferSize -1, blueBufferSize -1, alphaBufferSize -1, stencilBufferSize -1, samples -1, swapBehavior 0, swapInterval 1, profile 0)
PIXELFORMATDESCRIPTOR dwFlags=0x8c25 PFD_DRAW_TO_WINDOW PFD_SUPPORT_OPENGL PFD_SUPPORT_COMPOSITION PFD_DOUBLEBUFFER PFD_SWAP_LAYER_BUFFERS overlay iPixelType=0 cColorBits=32 cRedBits=8 cRedShift=16 cGreenBits=8 cGreenShift=8 cBlueBits=8 cBlueShift=0 cDepthBits=16 cAuxBuffers=4 iLayerType=0 cAlphaBits=8 cAlphaShift=24 swap interval: -1
default: ContextFormat: v3.0 profile: 0 options: QFlags(0x4)
HGLRC= 0x0
- resulted in
-
QTBUG-64545 Crash when using SoftwareRasterizer in QtQuick on Windows (was Unable find a suitable pixel format.)
-
- Closed
-