Handle Qt::AA_UseSoftwareOpenGL

Switch to software mode if it was requested with application attributes.

Task-number: QTBUG-59273
Change-Id: Ia48b4587a3cbe3590ee9231375e07d45381bc7b2
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>